--- a/html/index2.html
+++ b/html/index2.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Agendar Minha Visita</title>
-    <link rel="stylesheet" href="/html/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <div class="slider-left">
-        <img src="/imagens/prat1.jpg" class="slide-img active" alt="Pratica 1">
-        <img src="/imagens/prat2.jpg" class="slide-img" alt="Pratica 2">
-        <img src="/imagens/prat3.jpg" class="slide-img" alt="Pratica 3">
-        <img src="/imagens/prat4.jpg" class="slide-img" alt="Pratica 4">
-        <img src="/imagens/prat5.jpg" class="slide-img" alt="Pratica 5">
+        <img src="imagens/prat1.jpg" class="slide-img active" alt="Pratica 1">
+        <img src="imagens/prat2.jpg" class="slide-img" alt="Pratica 2">
+        <img src="imagens/prat3.jpg" class="slide-img" alt="Pratica 3">
+        <img src="imagens/prat4.jpg" class="slide-img" alt="Pratica 4">
+        <img src="imagens/prat5.jpg" class="slide-img" alt="Pratica 5">
     </div>
     <div class="slider-right">
-        <img src="/imagens/prat6.jpg" class="slide-img active" alt="Pratica 2">
-        <img src="/imagens/prat7.jpg" class="slide-img" alt="Pratica 4">
-        <img src="/imagens/prat8.jpg" class="slide-img" alt="Pratica 5">
-        <img src="/imagens/prat9.jpg" class="slide-img" alt="Pratica 3">
-        <img src="/imagens/prat10.jpg" class="slide-img" alt="Pratica 1">
+        <img src="imagens/prat6.jpg" class="slide-img active" alt="Pratica 2">
+        <img src="imagens/prat7.jpg" class="slide-img" alt="Pratica 4">
+        <img src="imagens/prat8.jpg" class="slide-img" alt="Pratica 5">
+        <img src="imagens/prat9.jpg" class="slide-img" alt="Pratica 3">
+        <img src="imagens/prat10.jpg" class="slide-img" alt="Pratica 1">
     </div>
 
     <div class="container">
@@ -50,6 +50,6 @@
             <ul id="dadosAgendamento"></ul>
         </div>
     </div>
-    <script src="/html/scripts/agendarminhavisita.js"></script>
+    <script src="scripts/agendarminhavisita.js"></script>
 </body>
 </html>
