--- a/html/index.html
+++ b/html/index.html
@@ -53,6 +53,6 @@
         </select>
         <button id="removerAgendamento" type="button">Remover Selecionada</button>
     </div>
-    <script src="app.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
