--- a/html/diretoria.html
+++ b/html/diretoria.html
@@ -52,9 +52,10 @@
             <option value="" disabled selected>--Selecione uma visita--</option>
         </select>
         <button id="removerAgendamento" type="button">Remover Selecionada</button>
-        <h2>Visitas à Diretoria</h2>
+        <h2>Visitas Confirmadas</h2>
         <ul id="listaVisitasDiretoria"></ul>
     </div>
     <script src="scripts/app.js"></script>
+    <script src="scripts/diretoria.js"></script>
 </body>
 </html>
