--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Bem-vindo ao Museu</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="imagens/fav1.png">
 </head>
 <body>
     <div class="container-home">
